# chatbot

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Cargo.toml  GROUND-TRUTH.md  LICENSE  NEPTUNE.md  PDFナレッジベース質問応答システム_20260116_113604.yml  PHASE-25-CODE-REVIEW.md  README.md  RL_DESIGN.md  ROADMAP.md  SECURITY.md  TECH_DEBT.md  biome.jsonc  code.json  docker-compose.yml  fix_dupes.js  instrumentation-client.ts  instrumentation.ts  intelligent_research_assistant_20260108_164230.yml  middleware.ts  multiply.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  rule_ver5.md  tailwind.config.ts  test  tokengate.md  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vercel-template.json  (+2 more)
.agents/: neptune.md
.devcontainer/: devcontainer.json
.github/: cve-allowlist.json  dependabot.yml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  providers.tsx
components/: SelfCodeButton.tsx  agent-status-indicator.tsx  app-sidebar.tsx  artifact-actions.tsx  artifact-close-button.tsx  artifact-messages.tsx  artifact.tsx  auth-form.tsx  benefit-applications-landing.tsx  chat-header.tsx  chat-resizable-layout.tsx  chat-search.tsx  chat.tsx  consent-modal.tsx  consent-page.tsx  console.tsx  context-usage.tsx  create-artifact.tsx  data-stream-handler.tsx  exit-warning-modal.tsx  greeting.tsx  icons.tsx  language-switcher.tsx  layout-header.tsx  message-actions.tsx  message.tsx  messages.tsx  mobile-header.tsx  model-selector-button.tsx  motion-provider.tsx  multimodal-input.tsx  preview-attachment.tsx  session-timeout-modal.tsx  side-chat-header.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  sign-out-with-confirmation.tsx  (+8 more)
connections/: github.ts  index.ts  linear.ts  nmi.ts
connectors/: index.md  log.md
crates/rustra/: Cargo.toml
crates/rustra-agent/: Cargo.toml
crates/rustra-agent/benches/: context.rs
crates/rustra-agent/src/: approval.rs  assembler.rs  definition.rs  delegate.rs  lib.rs
crates/rustra-browser/: Cargo.toml
crates/rustra-browser/src/: action.rs  lib.rs  manager.rs  session.rs  sync.rs  tool.rs
crates/rustra-core/: Cargo.toml
crates/rustra-core/src/: context.rs  error.rs  event.rs  id.rs  lib.rs  principal.rs  resource.rs  runtime_context.rs  tool.rs
crates/rustra-knowledge/: Cargo.toml
crates/rustra-knowledge/src/: collection.rs  context_source.rs  lib.rs  library.rs  tools.rs
crates/rustra-llm/: Cargo.toml
crates/rustra-llm/benches/: codec.rs
crates/rustra-llm/src/: anthropic.rs  lib.rs  mock.rs  openai.rs  types.rs
crates/rustra-mcp/: Cargo.toml
crates/rustra-mcp/src/: bridge.rs  client.rs  config.rs  lib.rs  registry.rs
crates/rustra-mcp/tests/: http_client.rs  stdio_client.rs
crates/rustra-memory/: Cargo.toml
crates/rustra-memory/src/: config.rs  context_source.rs  lib.rs  processor.rs
crates/rustra-messages/: Cargo.toml
crates/rustra-messages/src/: adapters.rs  lib.rs  registry.rs  tool.rs  types.rs
crates/rustra-observability/: Cargo.toml
crates/rustra-observability/src/: lib.rs
crates/rustra-rbac/: Cargo.toml
crates/rustra-rbac/src/: access.rs  auth.rs  lib.rs  policy.rs  sha256.rs
crates/rustra-server/: Cargo.toml
crates/rustra-server/examples/: serve.rs
crates/rustra-server/src/: auth.rs  error.rs  lib.rs
crates/rustra-server/src/routes/: agents.rs  browser.rs  decisions.rs  definitions.rs  mcp.rs  messages.rs  mod.rs  runs.rs  schedules.rs  signals.rs  tasks.rs  threads.rs  ui.rs  workflows.rs  workspace.rs
crates/rustra-server/tests/: server.rs
crates/rustra-skills/: Cargo.toml
crates/rustra-skills/src/: context_source.rs  lib.rs  library.rs  skill.rs  tools.rs
crates/rustra-storage/: Cargo.toml
crates/rustra-storage-firebase/: Cargo.toml
crates/rustra-storage-firebase/src/: codecs.rs  firestore.rs  lib.rs  queries.rs  rest.rs  stores.rs
crates/rustra-storage-postgres/: Cargo.toml
crates/rustra-storage-postgres/src/: acl.rs  definitions.rs  infra.rs  lib.rs  memory.rs  migrations.rs  observability.rs  tasks.rs  util.rs  vector.rs  workflow.rs
crates/rustra-storage-postgres/tests/: postgres.rs
crates/rustra-storage-sqlite/: Cargo.toml
crates/rustra-storage-sqlite/benches/: storage.rs
crates/rustra-storage-sqlite/src/: acl.rs  definitions.rs  infra.rs  lib.rs  memory.rs  migrations.rs  observability.rs  tasks.rs  util.rs  vector.rs  workflow.rs
crates/rustra-storage-sqlite/tests/: sqlite.rs
crates/rustra-storage/src/: conformance.rs  in_memory.rs  lib.rs  traits.rs  types.rs  vector.rs
crates/rustra-tasks/: Cargo.toml
crates/rustra-tasks/src/: interrupts.rs  lib.rs  manager.rs  scheduler.rs  signals.rs
crates/rustra-ui/: Cargo.toml
crates/rustra-ui/src/: lib.rs  render.rs  service.rs  tool.rs
crates/rustra-workflow/: Cargo.toml
crates/rustra-workflow/src/: builder.rs  definition.rs  engine.rs  lib.rs  step.rs
crates/rustra-workspace/: Cargo.toml
crates/rustra-workspace/src/: context_source.rs  fs.rs  lib.rs  lsp.rs  shell.rs  tools.rs
crates/rustra/src/: context.rs  executor.rs  hydrate.rs  lib.rs  registry.rs
crates/rustra/tests/: facade.rs
docs/: CHAT-V2-HANDOFF-AUDIT-2026-06-17.md  CHAT-V2-HANDOFF-E2E-TRACE-2026-06-17.md  CONTRIBUTING.md  IFRAME-HARNESS-RESEARCH-2026-06-17.md  MIGRATION-RESEARCH-2026-06-17.md  MIGRATION-SMOKE-2026-06-17.md  MIGRATION-SMOKE-RESULTS-2026-06-17.md  N8N-WORKFLOWS-2026-06-17.md  NEPTUNE-AGENT-OS-MASTER-V1.md  NEPTUNE-KNOWLEDGE-SPEC-v1.0.md  OKF-SPEC-v0.1.md  PHASE-32-COMPLETION-2026-06-17.md  SIGNIN-VERIFY-2026-06-17.md  TECHNICAL_GUIDE.md  agent-progress.yaml  architecture-explanation.md  autonomous-coding-platform-complete-2026-06-17.md  chat-discovery-integration-validation-2026-06-17.md  cloud.md  computer-use-framework-decision-2026-06-17.md  implementation-guide.md  index.md  knowledge-graph-sync-verification-2026-06-17.md  live-e2e-test-results-2026-06-17.md  log.md  technical-guide.md  (+11 more)
examples/quickstart/: Cargo.toml
examples/quickstart/src/: main.rs
(+1843 files in other folders)
