[package]
name = "rustra-mcp"
description = "Rustra: config-only MCP client support (server definitions, JSON-RPC client, registry, tool bridge)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core = { workspace = true }
rustra-storage = { workspace = true }
rustra-rbac = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

# Hermetic MCP server used by the integration tests (located via
# `env!("CARGO_BIN_EXE_fake_mcp_server")`). Not part of the public API.
[[bin]]
name = "fake_mcp_server"
path = "src/bin/fake_mcp_server.rs"
doc = false
