[package]
name = "rustra-memory"
description = "Agent memory: threads, message history, working memory, semantic recall (Mastra Memory analogue)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-llm.workspace = true
rustra-storage.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
