[package]
name = "rustra-storage-firebase"
description = "Rustra: experimental Firestore (REST API) storage backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-storage.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
