[package]
name = "rustra-storage-postgres"
description = "Rustra: PostgreSQL storage backend (storage domains + vector store)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-storage.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
