[package]
name = "rustra-tasks"
description = "Task runtime: supervised background tasks, cron schedules, signal bus, webhooks, HITL interrupts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-storage.workspace = true
rustra-observability.workspace = true
rustra-agent.workspace = true
async-trait.workspace = true
chrono.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
