[package]
name = "rustra-workspace"
description = "Per-user isolated workspaces: jailed file operations, shell access, LSP, and authoring locations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-storage.workspace = true
async-trait.workspace = true
chrono.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
