[package]
name = "rustra"
description = "Rustra: a Mastra-inspired agent framework in Rust — central registry and re-exports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustra-core.workspace = true
rustra-llm.workspace = true
rustra-storage.workspace = true
rustra-storage-sqlite.workspace = true
rustra-memory.workspace = true
rustra-agent.workspace = true
rustra-workflow.workspace = true
rustra-skills.workspace = true
rustra-knowledge.workspace = true
rustra-workspace.workspace = true
rustra-rbac.workspace = true
rustra-tasks.workspace = true
rustra-mcp.workspace = true
rustra-messages.workspace = true
rustra-observability.workspace = true
rustra-ui.workspace = true
rustra-browser.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
