[package]
name = "quickstart"
description = "Rustra end-to-end example: main agent, skills, workspace, workflow with HITL, schedule, signals"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rustra.workspace = true
rustra-llm.workspace = true
rustra-workflow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
